--- a/HTML_CSS/CSS/Atelier 3/css/style.css
+++ b/HTML_CSS/CSS/Atelier 3/css/style.css
@@ -1,79 +1,160 @@
 @import "normalize.css";
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Courgette',
-        cursive;
-    margin-left     : auto;
-    margin-right    : auto;
-    background-color: #F2F2F2;
-    text-align      : center;
-}
-
-img {
-    max-width: 30%;
+  /*font-family: "Courgette", cursive;*/
+  font-family: "Open Sans", sans-serif;
+  background-color: #f2f2f2;
+  text-align: center;
 }
 
 a {
-    transition: all 0.2 ease;
+  transition: all 0.2 ease;
+}
+
+.container {
+  width: 75%;
+  max-width: 1500px;
 }
 
 .topbar {
-    background-color: black;
-    color           : #F6D4F5;
-    width           : 100%;
-    margin-bottom   : auto;
+  background-color: black;
+  color: #f6d4f5;
+  width: 100%;
+  margin-bottom: auto;
 }
 
 header {
-    background-color: #F6D4F5;
-    display         : flex;
+  background-color: #f6d4f5;
+  display: flex;
 }
 
-header>div.container {
-    height: 10%;
+header > div.container {
+  height: 10%;
 }
 
 header.left {
-    float: left;
+  float: left;
 }
 
-
 header nav {
-    margin-top     : auto;
-    align-self     : flex-end;
-    display        : flex;
-    justify-content: center;
-    white-space    : nowrap;
-    overflow       : hidden;
+  margin-top: auto;
+  align-self: flex-end;
+  display: flex;
+  justify-content: center;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 header nav a {
-    text-decoration: none;
-    color          : black;
-    padding        : 1em;
+  text-decoration: none;
+  color: black;
+  padding: 1em;
 }
 
 header nav a:hover {
-    background-color: rgb(53, 50, 50);
-    color           : white;
-    transition      : all 0.1s ease0s;
+  background-color: rgb(53, 50, 50);
+  color: white;
+  transition: all 0.1s ease0s;
+}
+
+main {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#slider {
+  margin-top: 1em;
+  position: relative;
+  text-align: center;
+  padding: 1em;
+  background-color: white;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+#slider > h2 {
+  font-size: 90%;
+  padding: 0.5em;
+  background-color: #f6d4f5;
+  opacity: 0.8;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: 1em;
+  margin-left: 1em;
+}
+
+#slider > img {
+  max-width: 100%;
+}
+
+#select {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  margin-top: 1em;
+  position: relative;
+  text-align: center;
+  padding: 2em;
+  background-color: white;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+#select > h1 {
+  font-size: 1em;
+  position: absolute;
+  top: 0;
+  left: 1em;
+}
+
+.escarpin {
+  opacity: 1;
+  transition: opacity 1s ease-out;
+}
+
+.escarpin:hover {
+  opacity: 0.5;
+  transition: opacity 0.2s ease;
+}
+
+.escarpin > img {
+  max-width: 100%;
+  margin-top: 2em;
+}
+
+.escarpin > h3 {
+  font-size: 1em;
+  font-family: "Courgette", cursive;
+}
+
+#news {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  margin-top: 1em;
+  position: relative;
+  text-align: center;
+  padding: 2em;
+  background-color: white;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .clear::after {
-    clear      : both;
-    content    : ".";
-    display    : block;
-    height     : 0;
-    line-height: 0;
-    visibility : hidden;
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  line-height: 0;
+  visibility: hidden;
 }
 
 @media (max-width: 1500px) {
-    .container {
-        width: 75%;
-    }
+  .container {
+    width: 75%;
+  }
 }
