--- a/HTML_CSS/CSS/Atelier 3/css/style.css
+++ b/HTML_CSS/CSS/Atelier 3/css/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  /*font-family: "Courgette", cursive;*/
   font-family: "Open Sans", sans-serif;
   background-color: #f2f2f2;
   text-align: center;
@@ -13,6 +12,10 @@ body {
 
 a {
   transition: all 0.2 ease;
+}
+
+img {
+  max-width: 100%;
 }
 
 .container {
@@ -24,20 +27,37 @@ a {
   background-color: black;
   color: #f6d4f5;
   width: 100%;
-  margin-bottom: auto;
 }
 
 header {
   background-color: #f6d4f5;
-  display: flex;
 }
 
 header > div.container {
+  margin-left: auto;
+  margin-right: auto;
   height: 10%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-header.left {
-  float: left;
+#cart {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#cart > p > span {
+  display: block;
+  font-weight: bold;
+  text-align: right;
+}
+
+#cart > i {
+  font-size: 2em;
+  color: #e3ade1;
+  padding: 0.5em;
 }
 
 header nav {
@@ -45,14 +65,15 @@ header nav {
   align-self: flex-end;
   display: flex;
   justify-content: center;
-  white-space: nowrap;
   overflow: hidden;
+  flex-basis: 100%;
 }
 
 header nav a {
   text-decoration: none;
   color: black;
   padding: 1em;
+  flex-grow: 1;
 }
 
 header nav a:hover {
@@ -87,10 +108,6 @@ main {
   margin-left: 1em;
 }
 
-#slider > img {
-  max-width: 100%;
-}
-
 #select {
   display: flex;
   flex-direction: row;
@@ -98,10 +115,19 @@ main {
   align-items: flex-end;
   margin-top: 1em;
   position: relative;
-  text-align: center;
   padding: 2em;
   background-color: white;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+#select:hover {
+  opacity: 0.5;
+  transition: opacity 0.2s ease;
+}
+
+.escarpin:hover #select {
+  opacity: 1;
+  transition: opacity 1s ease-out;
 }
 
 #select > h1 {
@@ -111,18 +137,7 @@ main {
   left: 1em;
 }
 
-.escarpin {
-  opacity: 1;
-  transition: opacity 1s ease-out;
-}
-
-.escarpin:hover {
-  opacity: 0.5;
-  transition: opacity 0.2s ease;
-}
-
 .escarpin > img {
-  max-width: 100%;
   margin-top: 2em;
 }
 
@@ -132,16 +147,100 @@ main {
 }
 
 #news {
+  margin-top: 1em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+#news > article h2 {
+  font-size: 90%;
+  color: white;
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+  padding-left: 1em;
+  text-align: justify;
+}
+
+#news > article h3,
+#news > article small {
+  font-family: "Courgette", cursive;
+}
+
+#new {
+  position: relative;
+  text-align: center;
+  padding: 1em;
+  background-color: white;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+#new > h2 {
+  background-color: #e935c3;
+}
+
+#best {
+  position: relative;
+  text-align: center;
+  padding: 1em;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+  background-color: white;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+#best > h2 {
+  background-color: #91bd46;
+}
+
+#crush {
+  position: relative;
+  text-align: center;
+  padding: 1em;
+  background-color: white;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+#crush > h2 {
+  background-color: #0398b0;
+}
+
+footer {
+  margin-top: 1em;
+}
+
+#info {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: flex-end;
-  margin-top: 1em;
-  position: relative;
-  text-align: center;
-  padding: 2em;
-  background-color: white;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  background-color: #e3ade1;
+  padding: 1.5em;
+}
+
+#info > article:hover {
+  color: white;
+  cursor: pointer;
+}
+
+#info > article i {
+  display: block;
+}
+
+#bottombar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  background-color: #f6d4f5;
+  padding: 1.5em;
+  font-size: 90%;
+}
+
+#bottombar > article ul {
+  padding: 0;
+  list-style-type: none;
 }
 
 .clear::after {
@@ -153,8 +252,51 @@ main {
   visibility: hidden;
 }
 
-@media (max-width: 1500px) {
-  .container {
-    width: 75%;
+@media screen and (max-width: 860px) {
+  header nav,
+  #select,
+  #news,
+  #info,
+  #bottombar {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  header > div.container {
+    display: block;
+  }
+
+  #cart {
+    display: none;
+  }
+
+  header nav a {
+    width: 100%;
+  }
+
+  #slider > h2 {
+    position: relative;
+    margin-top: 0;
+  }
+
+  #news {
+    margin: 1em 0;
+  }
+
+  #best {
+    margin: 1em 0;
+  }
+
+  #info {
+    padding: 1em;
+  }
+
+  #info > article {
+    margin: 0.2em;
+  }
+
+  #bottombar {
+    font-size: 80%;
   }
 }
