--- a/ASP.Net/Commerce_en_ligne/WebApp/WebApp/Site.Master
+++ b/ASP.Net/Commerce_en_ligne/WebApp/WebApp/Site.Master
@@ -4,7 +4,7 @@
 
 <html lang="fr">
 <head runat="server">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%: Page.Title %> - Mon ASP.NET Application</title>
@@ -13,9 +13,8 @@
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
 
-    <webopt:bundlereference runat="server" path="~/Content/css" />
+    <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-
 </head>
 <body>
     <form runat="server">
@@ -63,10 +62,87 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - Mon ASP.NET Application</p>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3 col-lg-3">
+                            <div class="title"><strong>Information</strong></div>
+                            <ul class="information">
+                                <li>
+                                    <p>Sitemap</p>
+                                </li>
+
+                                <li>
+                                    <p>Shipping & returns</p>
+                                </li>
+
+                                <li>
+                                    <p>Privacy notice</p>
+                                </li>
+                                <li>
+                                    <p></p>
+                                </li>
+                                <li>
+                                    <p></p>
+                                </li>
+                                <li>
+                                    <p></p>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="col-md-3 col-lg-3">
+                            <div class="title"><strong>Customer service</strong></div>
+                            <ul class="customer_service">
+                                <li>
+                                    <a href="#">Home</a>
+                                </li>
+
+                                <li>
+                                    <a href="#">About</a>
+                                </li>
+
+                                <li>
+                                    <a href="#">Blog</a>
+                                </li>
+
+                                <li>
+                                    <a href="#">Gallery </a>
+                                </li>
+
+                                <li>
+                                    <a href="#">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="col-md-3 col-lg-3">
+                            <strong>My account</strong>
+                            <ul class="account">
+                                <li>
+                                    <a href="#"><i class="fa fa-facebook fa-2x"></i></a>
+                                </li>
+
+                                <li>
+                                    <a href="#"><i class="fa fa-github fa-2x"></i></a>
+                                </li>
+
+                                <li>
+                                    <a href="#"><i class="fa fa-linkedin fa-2x"></i></a>
+                                </li>
+
+                                <li>
+                                    <a href="#"><i class="fa fa-tumblr fa-2x"></i></a>
+                                </li>
+
+                                <li>
+                                    <a href="#"><i class="fa fa-google-plus fa-2x"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </footer>
         </div>
-
     </form>
 </body>
 </html>
