--- a/ASP.Net/Commerce_en_ligne/WebApp/WebApp/Site.Master
+++ b/ASP.Net/Commerce_en_ligne/WebApp/WebApp/Site.Master
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - Mon ASP.NET Application</title>
+    <title>nopCommerce demo store</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -38,29 +38,40 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" runat="server" href="~/">Nom de l'application</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Accueil</a></li>
-                        <li><a runat="server" href="~/About">À propos de</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+        <%--Site Content--%>
+        <div class="container body-content">
+
+            <header>
+                <div class="d-flex justify-content-between">
+                    <asp:DropDownList ID="CurrencyDropDownList" runat="server" CssClass="form-control currency-dropdown" />
+                    <ul class="list-inline" id="header-menu">
+                        <li class="list-inline-item"><a href="#">REGISTER</a></li>
+                        <li class="list-inline-item"><a href="#">LOG IN</a></li>
+                        <li class="list-inline-item"><a href="#">WISHLIST</a></li>
+                        <li class="list-inline-item"><a href="#"><i class="fa fa-shopping-bag fa-fw"></i>SHOPPING CART</a></li>
                     </ul>
                 </div>
-            </div>
-        </div>
-        <div class="container body-content">
+                <hr />
+                <div class="d-flex justify-content-between">
+                    
+                    <a href="#">
+                        <img src="img/logo.png" /></a>
+
+                    <div class="input-group md-form form-sm form-2 pl-0">
+                        <input class="form-control my-0 py-1 red-border" type="text" placeholder="Search" aria-label="Search">
+                        <div class="input-group-append">
+                            <span class="input-group-text red lighten-3" id="basic-text1"><i class="fa fa-search text-grey"
+                                aria-hidden="true"></i></span>
+                        </div>
+                    </div>
+                </div>
+            </header>
+
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
+
             <hr />
+
             <footer>
                 <div class="container">
                     <div class="row">
@@ -68,24 +79,24 @@
                             <div class="title"><strong>Information</strong></div>
                             <ul class="information">
                                 <li>
-                                    <p>Sitemap</p>
+                                    <a href="#">Sitemap</a>
                                 </li>
 
                                 <li>
-                                    <p>Shipping & returns</p>
+                                    <a href="#">Shipping & returns</a>
                                 </li>
 
                                 <li>
-                                    <p>Privacy notice</p>
+                                    <a href="#">Privacy notice</a>
                                 </li>
                                 <li>
-                                    <p></p>
+                                    <a href="#">Conditions of Use</a>
                                 </li>
                                 <li>
-                                    <p></p>
+                                    <a href="#">About us</a>
                                 </li>
                                 <li>
-                                    <p></p>
+                                    <a href="#">Contact us</a>
                                 </li>
                             </ul>
                         </div>
@@ -116,26 +127,30 @@
                         </div>
 
                         <div class="col-md-3 col-lg-3">
-                            <strong>My account</strong>
+                            <div class="title"><strong>My account</strong></div>
                             <ul class="account">
                                 <li>
-                                    <a href="#"><i class="fa fa-facebook fa-2x"></i></a>
+                                    <a href="#">My account</a>
                                 </li>
 
                                 <li>
-                                    <a href="#"><i class="fa fa-github fa-2x"></i></a>
+                                    <a href="#">Orders</a>
                                 </li>
 
                                 <li>
-                                    <a href="#"><i class="fa fa-linkedin fa-2x"></i></a>
+                                    <a href="#">Addresses</a>
                                 </li>
 
                                 <li>
-                                    <a href="#"><i class="fa fa-tumblr fa-2x"></i></a>
+                                    <a href="#">Shopping cart</a>
                                 </li>
 
                                 <li>
-                                    <a href="#"><i class="fa fa-google-plus fa-2x"></i></a>
+                                    <a href="#">Wishlist</a>
+                                </li>
+
+                                <li>
+                                    <a href="#">Apply for vendor account</a>
                                 </li>
                             </ul>
                         </div>
