--- a/MVC/jeudontonestlehero/WebApplication/Views/Shared/_Layout.cshtml
+++ b/MVC/jeudontonestlehero/WebApplication/Views/Shared/_Layout.cshtml
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - WebApplication</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/bundle.css" />
 </head>
 <body>
     <header>
@@ -40,9 +39,7 @@
             &copy; 2021 - WebApplication - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/jquery.slim.min.js"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/bundle.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
