--- a/MVC/jeudontonestlehero/jeudontonestleheros.BackOffice.Web.UI/Views/Section/Create.cshtml
+++ b/MVC/jeudontonestlehero/jeudontonestleheros.BackOffice.Web.UI/Views/Section/Create.cshtml
@@ -1,9 +1,7 @@
-﻿@using jedontonestleheros.Core.Data 
-@model Paragraphe
+﻿@using jeudontonestleheros.Core.Data.Models
+@model Section
 
-@{
-    ViewData["Title"] = "Create";
-}
+@{ ViewData["Title"] = "Create"; }
 
 <h1>Create</h1>
 
@@ -12,21 +10,17 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Number" class="control-label"></label>
                 <input asp-for="Number" class="form-control" />
-                <span asp-validation-for="Number" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" class="form-control"></textarea>
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <textarea asp-for="Description" class="form-control" cols="80" rows="10"></textarea>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
